// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`create-named-snap-account confirmation matches snapshot 1`] = `
<div>
  <div
    class="confirmation-page"
  >
    <div
      class="mm-box confirmation-page__content mm-box--padding-0"
      style="margin-top: 0px; overflow-y: auto;"
    >
      <div
        class="mm-box name-snap-account-page mm-box--padding-4"
      >
        <header
          class="mm-box mm-header-base mm-modal-header mm-box--padding-4 mm-box--padding-right-4 mm-box--padding-bottom-4 mm-box--padding-left-4 mm-box--display-flex mm-box--justify-content-space-between"
        >
          <div
            class="mm-box mm-box--width-full"
          >
            <h4
              class="mm-box mm-text mm-text--heading-sm mm-text--text-align-center mm-box--color-text-default"
            >
              Add account to MetaMask
            </h4>
          </div>
          <div
            class="mm-box mm-box--display-flex mm-box--justify-content-flex-end"
            style="min-width: 0px;"
          >
            <button
              aria-label="Close"
              class="mm-box mm-button-icon mm-button-icon--size-sm mm-box--display-inline-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-icon-default mm-box--background-color-transparent mm-box--rounded-lg"
            >
              <span
                class="mm-box mm-icon mm-icon--size-sm mm-box--display-inline-block mm-box--color-inherit"
                style="mask-image: url('./images/icons/close.svg');"
              />
            </button>
          </div>
        </header>
        <form
          class="mm-box"
        >
          <div
            class="mm-box mm-form-text-field mm-box--display-flex mm-box--gap-2 mm-box--flex-direction-column"
          >
            <label
              class="mm-box mm-text mm-label mm-label--html-for mm-form-text-field__label mm-text--body-md mm-text--font-weight-medium mm-box--display-inline-flex mm-box--align-items-center mm-box--color-text-default"
              for="account-name"
            >
              Account name
            </label>
            <div
              class="mm-box mm-text-field mm-text-field--size-lg mm-text-field--focused mm-text-field--truncate mm-form-text-field__text-field mm-box--padding-right-0 mm-box--padding-left-0 mm-box--display-inline-flex mm-box--align-items-center mm-box--background-color-background-default mm-box--rounded-sm mm-box--border-width-1 box--border-style-solid"
            >
              <input
                autocomplete="off"
                class="mm-box mm-text mm-input mm-input--disable-state-styles mm-text-field__input mm-text--body-md mm-box--margin-0 mm-box--padding-0 mm-box--padding-right-4 mm-box--padding-left-4 mm-box--color-text-default mm-box--background-color-transparent mm-box--border-style-none"
                focused="true"
                id="account-name"
                placeholder=""
                type="text"
                value=""
              />
            </div>
            <p
              class="mm-box mm-text mm-help-text mm-form-text-field__help-text mm-text--body-xs mm-box--margin-top-1 mm-box--color-text-default"
            >
              ​
            </p>
          </div>
          <div
            class="mm-box mm-box--margin-top-1 mm-box--display-flex mm-box--gap-2"
          >
            <button
              class="mm-box mm-text mm-button-base mm-button-base--size-md mm-button-base--block mm-button-secondary mm-text--body-md-medium mm-box--padding-0 mm-box--padding-right-4 mm-box--padding-left-4 mm-box--display-inline-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-primary-default mm-box--background-color-transparent mm-box--rounded-pill mm-box--border-color-primary-default box--border-style-solid box--border-width-1"
              data-testid="cancel-add-account-with-name"
              type="button"
            >
              Cancel
            </button>
            <button
              class="mm-box mm-text mm-button-base mm-button-base--size-md mm-button-base--block mm-button-primary mm-text--body-md-medium mm-box--padding-0 mm-box--padding-right-4 mm-box--padding-left-4 mm-box--display-inline-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-primary-inverse mm-box--background-color-primary-default mm-box--rounded-pill"
              data-testid="submit-add-account-with-name"
              data-theme="light"
              type="submit"
            >
              Add account
            </button>
          </div>
        </form>
      </div>
    </div>
    <div
      class="confirmation-footer"
      style="box-shadow: var(--shadow-size-lg) var(--color-shadow-default);"
    />
  </div>
</div>
`;

exports[`create-named-snap-account confirmation matches snapshot 2`] = `
<div>
  <div
    class="confirmation-page"
  >
    <div
      class="mm-box confirmation-page__content mm-box--padding-0"
      style="margin-top: 0px; overflow-y: auto;"
    >
      <div
        class="mm-box name-snap-account-page mm-box--padding-4"
      >
        <header
          class="mm-box mm-header-base mm-modal-header mm-box--padding-4 mm-box--padding-right-4 mm-box--padding-bottom-4 mm-box--padding-left-4 mm-box--display-flex mm-box--justify-content-space-between"
        >
          <div
            class="mm-box mm-box--width-full"
          >
            <h4
              class="mm-box mm-text mm-text--heading-sm mm-text--text-align-center mm-box--color-text-default"
            >
              Add account to MetaMask
            </h4>
          </div>
          <div
            class="mm-box mm-box--display-flex mm-box--justify-content-flex-end"
            style="min-width: 0px;"
          >
            <button
              aria-label="Close"
              class="mm-box mm-button-icon mm-button-icon--size-sm mm-box--display-inline-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-icon-default mm-box--background-color-transparent mm-box--rounded-lg"
            >
              <span
                class="mm-box mm-icon mm-icon--size-sm mm-box--display-inline-block mm-box--color-inherit"
                style="mask-image: url('./images/icons/close.svg');"
              />
            </button>
          </div>
        </header>
        <form
          class="mm-box"
        >
          <div
            class="mm-box mm-form-text-field mm-box--display-flex mm-box--gap-2 mm-box--flex-direction-column"
          >
            <label
              class="mm-box mm-text mm-label mm-label--html-for mm-form-text-field__label mm-text--body-md mm-text--font-weight-medium mm-box--display-inline-flex mm-box--align-items-center mm-box--color-text-default"
              for="account-name"
            >
              Account name
            </label>
            <div
              class="mm-box mm-text-field mm-text-field--size-lg mm-text-field--focused mm-text-field--truncate mm-form-text-field__text-field mm-box--padding-right-0 mm-box--padding-left-0 mm-box--display-inline-flex mm-box--align-items-center mm-box--background-color-background-default mm-box--rounded-sm mm-box--border-width-1 box--border-style-solid"
            >
              <input
                autocomplete="off"
                class="mm-box mm-text mm-input mm-input--disable-state-styles mm-text-field__input mm-text--body-md mm-box--margin-0 mm-box--padding-0 mm-box--padding-right-4 mm-box--padding-left-4 mm-box--color-text-default mm-box--background-color-transparent mm-box--border-style-none"
                focused="true"
                id="account-name"
                placeholder="Suggested Account Name"
                type="text"
                value=""
              />
            </div>
            <p
              class="mm-box mm-text mm-help-text mm-form-text-field__help-text mm-text--body-xs mm-box--margin-top-1 mm-box--color-text-default"
            >
              ​
            </p>
          </div>
          <div
            class="mm-box mm-box--margin-top-1 mm-box--display-flex mm-box--gap-2"
          >
            <button
              class="mm-box mm-text mm-button-base mm-button-base--size-md mm-button-base--block mm-button-secondary mm-text--body-md-medium mm-box--padding-0 mm-box--padding-right-4 mm-box--padding-left-4 mm-box--display-inline-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-primary-default mm-box--background-color-transparent mm-box--rounded-pill mm-box--border-color-primary-default box--border-style-solid box--border-width-1"
              data-testid="cancel-add-account-with-name"
              type="button"
            >
              Cancel
            </button>
            <button
              class="mm-box mm-text mm-button-base mm-button-base--size-md mm-button-base--block mm-button-primary mm-text--body-md-medium mm-box--padding-0 mm-box--padding-right-4 mm-box--padding-left-4 mm-box--display-inline-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-primary-inverse mm-box--background-color-primary-default mm-box--rounded-pill"
              data-testid="submit-add-account-with-name"
              data-theme="light"
              type="submit"
            >
              Add account
            </button>
          </div>
        </form>
      </div>
    </div>
    <div
      class="confirmation-footer"
      style="box-shadow: var(--shadow-size-lg) var(--color-shadow-default);"
    />
  </div>
</div>
`;
